--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/benfoxall/coverage-timeline/issues"
   },
-  "homepage": "https://github.com/benfoxall/coverage-timeline#readme"
+  "homepage": "https://github.com/benfoxall/coverage-timeline#readme",
+  "devDependencies": {
+    "rollup": "^0.50.0",
+    "rollup-plugin-buble": "^0.16.0",
+    "rollup-plugin-string": "^2.0.2"
+  }
 }
