--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/benfoxall/coverage-timeline#readme",
   "devDependencies": {
+    "esprima": "^4.0.0",
+    "recast": "^0.12.6",
     "rollup": "^0.50.0",
     "rollup-plugin-buble": "^0.16.0",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-string": "^2.0.2"
   }
 }
